develop/k8s/burning.yaml

#### service
apiVersion: v1
kind: Service
metadata:
  name: svc-miniprogram-burning
  labels:
    app: svc-miniprogram-burning
spec:
  externalTrafficPolicy: Local
  selector:
    app: miniprogram-burning
  ports:
    - name: internal-miniprogram-burning
      port: 9001          # 服务访问端口
      targetPort: 8080       # 容器端口
      nodePort: 32001      # NodePort
  type: NodePort
