develop/k8s/burning-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: miniprogram.burning.ingress
  annotations:
    nginx.ingress.kubernetes.io/opentelemetry-operation-name: "iniprogram.burning"
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    nginx.ingress.kubernetes.io/opentelemetry-trust-incoming-span: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        auth_request /token/validate;
        auth_request_set $user $upstream_http_x_forwarded_user;
        add_header Set-Cookie $user; # 可以传递Cookie     
        set $dummy_val "$opentelemetry_context_traceparent";   
spec:
  rules:
  - http:
      paths:
      - path:  /mini/burning
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-miniprogram-burning
            port:
              number: 9001         
  ingressClassName: nginx 
  tls:
  - hosts:
    - weridolin.cn
    secretName: site-tls
